[package]
name = "yadwh"
license = "MIT"
version = "0.1.0"
edition = "2021"
description = "Yet Another Discord Webhook Crate"
readme = "README.md"
homepage = "https://github.com/Ohkthx/yadwh-rs"
repository = "https://github.com/Ohkthx/yadwh-rs"
keywords = ["discord", "webhook", "asynchronous", "notify", "notifications"]
exclude = ["commit_msg", "target/"]

[features]
examples = ["dep:tokio"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3" # Async / await blocks
tokio = { version = "1.12.0", features = ["full"], optional = true } # Async runtime
serde_json = "1.0.96" # Converting Objects from API.
serde = { version = "1.0.163", features = ["derive"] } # Converting Objects from API.
hyper = {version = "0.14.27", features = ["client", "tcp", "http1"] } # Used to make HTTP requests.
hyper-tls = "0.5.0" # Used to make HTTPS requests with Hyper.
