[package]
name = "yadwh"
license = "MIT"
version = "0.1.3"
edition = "2021"
description = "Yet Another Discord Webhook Crate"
readme = "README.md"
homepage = "https://github.com/Ohkthx/yadwh-rs"
repository = "https://github.com/Ohkthx/yadwh-rs"
keywords = ["discord", "webhook", "asynchronous", "notify", "notifications"]
include = ["**/*.rs"]

[features]
default = []
full = ["examples"]
examples = ["dep:tokio"]

[[example]]
name = "get_webhook"
path = "examples/get_webhook.rs"
required-features = ["examples"]

[[example]]
name = "modify_webhook"
path = "examples/modify_webhook.rs"
required-features = ["examples"]

[[example]]
name = "delete_webhook"
path = "examples/delete_webhook.rs"
required-features = ["examples"]

[[example]]
name = "create_message"
path = "examples/create_message.rs"
required-features = ["examples"]

[[example]]
name = "create_thread_message"
path = "examples/create_thread_message.rs"
required-features = ["examples"]

[[example]]
name = "get_message"
path = "examples/get_message.rs"
required-features = ["examples"]

[[example]]
name = "edit_message"
path = "examples/edit_message.rs"
required-features = ["examples"]

[[example]]
name = "delete_message"
path = "examples/delete_message.rs"
required-features = ["examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3" # Async / await blocks
tokio = { version = "1.12.0", features = ["full"], optional = true } # Async runtime
serde_json = "1.0.96" # Converting Objects from API.
serde = { version = "1.0.163", features = ["derive"] } # Converting Objects from API.
hyper = {version = "0.14.27", features = ["client", "tcp", "http1"] } # Used to make HTTP requests.
hyper-tls = "0.5.0" # Used to make HTTPS requests with Hyper.
